--- a/cart-app/package.json
+++ b/cart-app/package.json
@@ -18,6 +18,11 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^4.5.0",
+        "node-sass": "^4.14.1",
+        "sass": "^1.26.10",
+        "sass-loader": "^10.0.4",
+        "style-loader": "^2.0.0",
+        "css-loader": "^6.7.1",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0",
